--- a/app/routes/articles.hello-world.mdx
+++ b/app/routes/articles.hello-world.mdx
@@ -1,13 +1,13 @@
 ---
 title: 'Hello world: how I built this site'
-abstract: I originally built this portfolio site back in 2018, and since then it's evolved quite a bit. Recently I migrated from Create React App to Next.js and made some major upgrades in the process.
-date: '2022-04-21'
+abstract: I originally built this portfolio site back in 2024, and since then it's evolved quite a bit. Recently I migrated from Create React App to Next.js and made some major upgrades in the process.
+date: '2026-01-04'
 banner: /static/hello-world-banner.jpg
 ---
 
 ## How it all started
 
-Back in 2018 I needed to update my portfolio site (as designers are wont to do). I thought I'd steer away from current trends and build a site that tapped into the 80s and 90s Cyberpunk aesthetic. The genre contains some of my favorite movies like Ghost in the Shell (1995), The Matrix (1999), and Akira (1988). That's where I borrowed few visual motifs like the bold katakana lettering on the homepage and the text decoding effect as a homage to the Matrix's "Digital rain" effect, which was itself inspired by Ghost in the Shell's opening credits. There's even a nod to Ghost in the Shell on my [404 page](/404).
+Back in 2024 I needed to update my portfolio site (as designers are wont to do). I thought I'd steer away from current trends and build a site that tapped into the 80s and 90s Cyberpunk aesthetic. The genre contains some of my favorite movies like Ghost in the Shell (1995), The Matrix (1999), and Akira (1988). That's where I borrowed few visual motifs like the bold katakana lettering on the homepage and the text decoding effect as a homage to the Matrix's "Digital rain" effect, which was itself inspired by Ghost in the Shell's opening credits. There's even a nod to Ghost in the Shell on my [404 page](/404).
 
 ![A scene from Ghost in the Shell (1995) with the Major cloaking with thermoptic camouflage; the poster for Akira; The Matrix's digital rain effect](/static/inspiration.png)
 
@@ -45,7 +45,7 @@ Somewhat related to the route transitions, I had to opt out of both Next.js's an
 
 ## Looking back, and forward
 
-It's been pretty neat to see how popular the site's been on Github, with 500 stars (as of writing this post). It's also neat seeing how people adapt it to their own style and modify it, which is part of the reason I made it open source. I want others to be able to take it apart and see how it's made, learn from and improve upon it. That's what inspect element used to be like on the web, but with modern sites compiling and minifying and injecting garbled strings into css classes that's not as simple these days. The next best thing I could do was to open source it.
+I was able to adapt a lot from Hamish, he is the one i got the initial motivation from and I wish to work with him more.
 
 I look forward to continuing to use this site as a playground, and it'll be interesting to compare the next iteration to where it is today.
 
